log
Thu 07 Sep 2023 12:52:08 AM UTC: 
 hashmap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:18: error: assignment to ‘Pair **’ from incompatible pointer type ‘void **’ [-Werror=incompatible-pointer-types]
   65 |     map->buckets = (void **)malloc(sizeof(void *) * capacity);
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
a278350
Thu 07 Sep 2023 12:54:34 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:21: error: ‘Bucket’ undeclared (first use in this function)
   64 |     map->buckets = (Bucket **)malloc(sizeof(Bucket *) * capacity);
      |                     ^~~~~~
hashmap.c:64:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:64:30: error: expected expression before ‘)’ token
   64 |     map->buckets = (Bucket **)malloc(sizeof(Bucket *) * capacity);
      |                              ^
Compilation failed
3a1a0f9
Thu 07 Sep 2023 01:01:35 AM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b6e01c8
